# schoolorbit-new

./: .env.example  .env.smoke.example  .gitignore  .rules  AGENTS.md  API_TOKEN_PERMISSIONS.md  CLEANUP_SUMMARY.md  CLOUDFLARE_API_SETUP.md  CLOUDFLARE_QUICK_SETUP.md  CONTAINER_RESTART_TROUBLESHOOTING.md  Cargo.toml  ENVIRONMENT_VARIABLES.md  GEMINI.md  GITHUB_CONTAINER_REGISTRY.md  GIT_COMMIT_GUIDE.md  IMPROVEMENT_PLAN.md  INTER_SERVICE_COMMUNICATION.md  NEON_API_SETUP.md  PORTAINER_DEPLOYMENT.md  README.md  SQLX_BUILD_FIX.md  STANDALONE_PROJECTS.md  TODO_ENCRYPTION.md  WORKFLOWS_WEBHOOKS.md  convert-form.py  docker-compose.yml  package-lock.json  podman-compose.yml
backend-admin/: .dockerignore  .env.example  .env.portainer.example  API_EXAMPLES.md  AUTO_DEPLOYMENT.md  CORS_NOTE.md  CORS_SETUP.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  NGINX_SETUP.md  README.md  SCHOOL_API.md  SETUP_CREDENTIALS.md  docker-compose.portainer.yml  docker-compose.yml  nginx.conf.example  seed_admin.txt
backend-admin/migrations/: 001_create_schools.sql  002_create_admin_users.sql  003_placeholder.sql  004_create_deployment_history.sql  005_seed_admin_user.sql  006_add_migration_metadata.sql
backend-admin/scripts/: create_prod_admin.sh  deploy_tenant.sh  diagnose_login.sh  verify_admin.sh
backend-admin/src/: app.rs  auth.rs  error.rs  lib.rs  main.rs  types.rs
backend-admin/tests/: app_state.rs
backend-school/: .deploy-trigger  .deployment-trigger  .env.example  .env.portainer.example  .env.r2.example  Cargo.toml  Dockerfile  MIGRATIONS.md  README.md  docker-compose.yml
backend-school/docs/: ENCRYPTION_PROGRESS.md  ENCRYPTION_REFACTOR_GUIDE.md  FILE_STORAGE.md  FILE_STORAGE_PHASE1_COMPLETE.md  FILE_STORAGE_PHASE2_COMPLETE.md  FIX-ENCRYPTION-KEY-PRODUCTION.md  MIGRATION_REMOVE_ENCRYPTION.md  MODULE_CREATION_GUIDE.md  REFACTOR_EXAMPLE_AUTH.rs
backend-school/migrations/: 001_baseline.sql  001_create_users.sql  002_create_classes.sql  002_menu_workspace_code.sql  003_workflow_windows.sql  004_work_items.sql  005_create_staff_management.sql  005_teaching_supervision.sql  006_create_audit_logs.sql  006_teaching_supervision_default_permissions.sql  007_drop_unused_staff_columns.sql  007_dynamic_menu_system.sql  007_teaching_supervision_scoped_management_permissions.sql  008_drop_old_role_column.sql  008_supervision_observed_at.sql  009_add_menu_permissions.sql  009_dynamic_menu_system.sql  009_supervision_simplified_approval_flow.sql  010_admin_menu_items.sql  010_convert_permissions_to_array.sql  010_granular_crud_permissions.sql  010_scoped_permissions.sql  010_supervision_academic_affairs_approval_grant.sql  010_update_admin_permissions.sql  011_daily_teaching_overview_permission.sql  011_settings_permissions.sql  011_student_management.sql  012_academic_assessment_plans.sql  012_scoped_permissions.sql  013_academic_assessment_teacher_access.sql  013_add_menu_user_type.sql  013_enforce_scoped_permissions.sql  013_file_storage_system.sql  013_grant_admin_settings.sql  013_student_management.sql  014_academic_assessment_subject_plans.sql  014_common_menu_groups.sql  014_consent_management.sql  014_update_admin_permissions.sql  015_academic_assessment_subject_group_read.sql  (+99 more)
backend-school/migrations_legacy/: 001_create_users.sql  003_create_enrollments.sql  004_create_notifications.sql  005_create_staff_management.sql  006_create_audit_logs.sql  007_dynamic_menu_system.sql  015_performance_tuning.sql  019_refactor_grade_levels.sql  020_create_curriculum_basics.sql  023_create_subject_grade_levels.sql  029_update_timetable_entries_for_activities.sql  030_optimize_timetable_queries.sql  031_drop_period_type.sql  033_create_department_menus.sql  034_create_department_permissions.sql  035_create_student_parents.sql  038_create_study_plans.sql  040_create_instructor_preferences.sql  041_create_instructor_room_assignments.sql  042_create_timetable_locked_slots.sql  045_remove_unused_subject_fields.sql  046_create_admission_system.sql  047_fix_admission_numeric_types.sql  048_add_capacity_to_class_rooms.sql  049_extend_admission_application.sql  051_create_exam_room_tables.sql  056_detach_subject_groups_from_parent.sql  057_remove_hardcoded_dept_permissions.sql  058_subjects_use_start_year_versioning.sql  059_create_activity_groups.sql  060_activity_instructors_and_timetable.sql  061_admission_assigned_student_id.sql  064_school_settings_logo_path.sql  065_school_settings_add_file_id.sql  067_create_activity_slots.sql  068_school_days_and_activity_slot_days.sql  069_activity_group_grade_levels.sql  071_change_staff_fk_to_users.sql  072_slot_instructors_and_remove_schedule.sql  074_activity_slot_scheduling_settings.sql  (+27 more)
backend-school/scripts/: README_ENCRYPTION.md  set_encryption_role.sh  setup_r2.sh
backend-school/src/: api_contract.rs  api_response.rs  error.rs  main.rs  modules.rs  neon.rs  policies.rs  services.rs  test_helpers.rs  utils.rs
(+927 files in other folders)
