[workspace]
members = [
    "backend-admin",
    "backend-school",
    "shared"
]
resolver = "2"

[workspace.dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower-cookies = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "tls-native-tls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
