[package]
name = "backend-school"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "tls-native-tls"] }
dotenv = "0.15"
uuid = { version = "1.10", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
