[package]
name = "backend-school"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-cookies = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "tls-native-tls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
time = "0.3"
async-trait = "0.1"
