[package]
name = "backend-school"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-cookies = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "uuid", "tls-native-tls"] }
jsonwebtoken = "9"
bcrypt = "0.15"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json"] }
cookie = "0.18"
time = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# File Storage & R2/S3 Integration
aws-config = "1.1"
aws-sdk-s3 = "1.11"
aws-credential-types = "1.1"

# Image Processing
image = "0.24"
mime_guess = "2.0"
bytes = "1.5"

# File Hashing (for checksums)
sha2 = "0.10"
hex = "0.4"

# Field Encryption (AES-256-GCM)
aes-gcm = "0.10"
base64 = "0.21"
sha256 = "1.5"
rand = "0.8"
tokio-cron-scheduler = "0.15.1"
thiserror = "2.0.17"


[dev-dependencies]
tokio-test = "0.4"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
rand = "0.8"
